[package]
name = "setup-leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5", features = ["json", "cookies"] }
url = "2.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
duct = "0.13"
